# soundscap-c22mp-detect

./: LICENSE  README.md  c22mp.py  main.py  pyproject.toml  requirements.txt  soundscape_c22mp.py
