[tool.poetry]
name = "soundscape-c22mp-detect"
version = "0.1.0"
description = ""
authors = ["Augusto Nunes <nunes.augusto19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
p-tqdm = "^1.4.0"
pycatch22 = "^0.4.4"
librosa = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
